<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_check_out"
    android:background="@drawable/checkin_background"
    >

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_top"
            />

        <TextView
            android:id="@+id/tv_co_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_out_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="40pt"
            android:autoSizeMaxTextSize="100pt"
            android:autoSizeStepGranularity="2sp"
            app:fontFamily="serif-monospace" />



    </FrameLayout>




    <ImageView
        android:id="@+id/iv_co_shss"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/stayhomestaysafe" />


    <LinearLayout
        android:id="@+id/ll_co"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="@color/light_title"

            />

        <TextView
            android:id="@+id/tv_co_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_name"
            android:textColor="@color/darkgrey"
            />
        <TextView
            android:id="@+id/tv_co_property_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/property_type"
            android:textColor="@color/light_title"

            />

        <TextView
            android:id="@+id/tv_co_property_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_number_dots"
            android:textColor="@color/darkgrey"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            />

        <TextView
            android:id="@+id/tv_co_place_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/darkgrey"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checked_in_time"
            />

        <TextView
            android:id="@+id/tv_co_check_in_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/darkgrey"

            android:text="@string/time"
            />




        <Button
            android:id="@+id/btn_co_check_out"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/filledroundedbutton"
            android:text="@string/check_out"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="14sp"

            />




    </LinearLayout>







</LinearLayout>
