
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_register"
    android:paddingTop="10dp"
    android:background="@drawable/registerbackground"


    >



    <EditText
        android:id="@+id/et_register_first_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/first_name"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerHorizontal="true"
         android:inputType="text" />


    <EditText
        android:id="@+id/et_register_last_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_register_first_name"

        />




    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
         android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
         android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_register_last_name"        />



    <EditText
        android:id="@+id/et_register_phone_number"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_register_email"

        />





    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_register_phone_number"
         />






    <EditText
        android:id="@+id/et_register_verify_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text"
        android:hint="@string/verify_password"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_register_password"    />





    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:background="@drawable/filledroundedbutton"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:layout_centerInParent="true"
        android:layout_below="@+id/et_register_verify_password"

        />

</RelativeLayout>
